update llama2 example

--- a/example/Llama2_example.ipynb
+++ b/example/Llama2_example.ipynb
@@ -290,7 +290,7 @@
     "        push!(ids, new_id)\n",
     "        new_id == ends_id && break\n",
     "    end\n",
-    "    return decode(textenc, encoded)\n",
+    "    return encoded\n",
     "end"
    ]
   },
@@ -320,8 +320,6 @@
     }
    ],
    "source": [
-    "using StringViews\n",
-    "\n",
     "function generate(textenc, model, instruction; max_length = 512, k = 1, temperature = 1.2)\n",
     "    prompt = \"\"\"\n",
     "    [INST] <<SYS>>\n",
@@ -334,14 +332,7 @@
     "    \n",
     "    \"\"\"\n",
     "    text_token = generate_text(textenc, model, prompt; max_length, k, temperature)\n",
-    "    for (i, token) in enumerate(text_token)\n",
-    "        m = match(r\"<0x([0-9A-F]{2})>\", token)\n",
-    "        if !isnothing(m)\n",
-    "            c = parse(UInt8, m.captures[]; base=16)\n",
-    "            text_token[i] = StringView([c])\n",
-    "        end\n",
-    "    end\n",
-    "    gen_text = replace(join(text_token), '▁'=>' ')\n",
+    "    gen_text = decode_text(textenc, text_token)\n",
     "    println(gen_text)\n",
     "end"
    ]
